Updated powersocket config.

--- a/Hardware/Schematics/PowerSocket.cfg
+++ b/Hardware/Schematics/PowerSocket.cfg
@@ -3,7 +3,7 @@ local panelization = require 'boards.panelization'
 
 local PowerSocket = boards.load('./PowerSocket')
 
-local PowerSocket_panlized = panelization.panelize({{ PowerSocket, PowerSocket }}, {}, true)
+local PowerSocket_panlized = panelization.panelize({{ PowerSocket}, {PowerSocket }}, {}, true)
 
 boards.merge_apertures(PowerSocket_panlized)
 boards.save(PowerSocket_panlized, './PowerSocket_panlized')
