--- a/software/Makefile
+++ b/software/Makefile
@@ -12,7 +12,7 @@ CXXFLAGS += ${ALL_FLAGS}
 
 
 PROJECT_NAME := PowerSocket
-SPIFFS_ADDR := 0x310000
+SPIFFS_ADDR := 0x210000
 
 include $(IDF_PATH)/make/project.mk
 
@@ -20,7 +20,7 @@ images:
 	echo "+---------------------+"
 	echo "| Building spiffs.img |"
 	echo "+---------------------+"
-	mkspiffs -c spiffs_files -b 65536 -p 256 -s 524288 build/spiffs.img
+	mkspiffs -c ./spiffs_files -b 65536 -p 256 -s 0x100000 build/spiffs.img
 
 flashdata: images
 	echo "Flashing SPIFFS to ESP32"
