--- a/software/main/Makefile.projbuild
+++ b/software/main/Makefile.projbuild
@@ -2,6 +2,7 @@ ALL_FLAGS += -DNCLUDE_uxTaskGetStackHighWaterMark=1
 ALL_FLAGS += -DMBEDTLS_FS_IO
 ALL_FLAGS += -g
 ALL_FLAGS += -DMBEDTLS_MPI_WINDOW_SIZE=2
+ALL_FLAGS += -DMBEDTLS_X509_CRT_PARSE_C
 CXXFLAGS += ${ALL_FLAGS}
 CFLAGS += ${ALL_FLAGS}
 
