Many improvements: Utilize ssi to perform include operations in html files (this make it possible to have a common header/menu/etc. for each page, and prevents duplication). OTA upgrade is implemented. Seperated wifi handlr to its own class. Created a settings handler which stores data in nvs.

--- a/software/components/mongoose/Makefile.projbuild
+++ b/software/components/mongoose/Makefile.projbuild
@@ -6,6 +6,7 @@ ALL_FLAGS += -DMG_ENABLE_IPV6=1
 ALL_FLAGS += -DMG_ENABLE_HTTP_SSI=1
 ALL_FLAGS += -DMG_ENABLE_BROADCAST=1
 ALL_FLAGS += -DMG_SSL_IF=MG_SSL_IF_MBEDTLS
+ALL_FLAGS += -DMG_ENABLE_HTTP_STREAMING_MULTIPART
 
 CXXFLAGS += ${ALL_FLAGS}
 CFLAGS += ${ALL_FLAGS}
