--- a/software/main/Makefile.projbuild
+++ b/software/main/Makefile.projbuild
@@ -3,6 +3,9 @@ ALL_FLAGS += -DMBEDTLS_FS_IO
 ALL_FLAGS += -g
 ALL_FLAGS += -DMBEDTLS_MPI_WINDOW_SIZE=2
 ALL_FLAGS += -DMBEDTLS_X509_CRT_PARSE_C
+ALL_FLAGS += -ffunction-sections
+ALL_FLAGS += -fdata-sections
 CXXFLAGS += ${ALL_FLAGS}
 CFLAGS += ${ALL_FLAGS}
-
+LDFLAGS += -ffunction-sections
+LDFLAGS += -fdata-sections
