--- a/software/components/mongoose/Makefile.projbuild
+++ b/software/components/mongoose/Makefile.projbuild
@@ -1,9 +1,9 @@
 ALL_FLAGS += -DMG_ENABLE_FILESYSTEM
 ALL_FLAGS += -DESP_PLATFORM
 ALL_FLAGS += -DMG_ENABLE_SSL=1
-ALL_FLAGS += -DMG_ENABLE_IPV6=1
+#ALL_FLAGS += -DMG_ENABLE_IPV6=1
 ALL_FLAGS += -DMG_ENABLE_HTTP_SSI=1
-ALL_FLAGS += -DMG_ENABLE_BROADCAST=1
+#ALL_FLAGS += -DMG_ENABLE_BROADCAST=1
 ALL_FLAGS += -DMG_SSL_IF=MG_SSL_IF_MBEDTLS
 ALL_FLAGS += -DMG_ENABLE_HTTP_STREAMING_MULTIPART
 #ALL_FLAGS += -DMG_SSL_IF_MBEDTLS_MAX_FRAGMENT_LEN=1024
