--- a/software/main/Makefile.projbuild
+++ b/software/main/Makefile.projbuild
@@ -1,8 +1,8 @@
 ALL_FLAGS += -DNCLUDE_uxTaskGetStackHighWaterMark=1
 ALL_FLAGS += -DMBEDTLS_FS_IO
 ALL_FLAGS += -g
-ALL_FLAGS += -DMBEDTLS_MPI_WINDOW_SIZE=2
-ALL_FLAGS += -DMBEDTLS_X509_CRT_PARSE_C
+#ALL_FLAGS += -DMBEDTLS_MPI_WINDOW_SIZE=2
+#ALL_FLAGS += -DMBEDTLS_X509_CRT_PARSE_C
 ALL_FLAGS += -ffunction-sections
 ALL_FLAGS += -fdata-sections
 CXXFLAGS += ${ALL_FLAGS}
