Started using jquery to update stuff on the webpage, send reponses in json.

--- a/software/components/mongoose/Makefile.projbuild
+++ b/software/components/mongoose/Makefile.projbuild
@@ -1,8 +1,8 @@
 ALL_FLAGS += -DMG_ENABLE_FILESYSTEM
 ALL_FLAGS += -DESP_PLATFORM
 ALL_FLAGS += -DMG_ENABLE_SSL=1
-#ALL_FLAGS += -DMG_ENABLE_IPV6=1
-ALL_FLAGS += -DMG_ENABLE_HTTP_SSI=1
+ALL_FLAGS += -DMG_ENABLE_IPV6=1
+ALL_FLAGS += -DMG_ENABLE_HTTP_SSI=0
 #ALL_FLAGS += -DMG_ENABLE_BROADCAST=1
 ALL_FLAGS += -DMG_SSL_IF=MG_SSL_IF_MBEDTLS
 ALL_FLAGS += -DMG_ENABLE_HTTP_STREAMING_MULTIPART
