--- a/software/Makefile
+++ b/software/Makefile
@@ -13,10 +13,13 @@ SPIFFS_ADDR := 0x220000
 include $(IDF_PATH)/make/project.mk
 
 images:
+	echo "Resolving server side includes"
+	cp -R -T spiffs_files ${BUILD_DIR_BASE}/spiffs_files/
+	cd ${BUILD_DIR_BASE}/spiffs_files/html/; bash ${PROJECT_PATH}/SSI_parser.sh
 	echo "+---------------------+"
 	echo "| Building spiffs.img |"
 	echo "+---------------------+"
-	mkspiffs -c ./spiffs_files -b 65536 -p 256 -s 0x100000 build/spiffs.img
+	mkspiffs -c ${BUILD_DIR_BASE}/spiffs_files -b 65536 -p 256 -s 0x100000 ${BUILD_DIR_BASE}/spiffs.img
 
 flashdata: images
 	echo "Flashing SPIFFS to ESP32"
