Added page for showing the calibration More work on calibration infrastructure. !!!Not tested yet!!!

--- a/software/main/Makefile.projbuild
+++ b/software/main/Makefile.projbuild
@@ -4,6 +4,9 @@ ALL_FLAGS += -g
 #ALL_FLAGS += -DMBEDTLS_X509_CRT_PARSE_C
 ALL_FLAGS += -ffunction-sections
 ALL_FLAGS += -fdata-sections
+ALL_FLAGS += -Wall
+ALL_FLAGS += -Wextra
+ALL_FLAGS += -Werror
 CXXFLAGS += ${ALL_FLAGS}
 CFLAGS += ${ALL_FLAGS}
 LDFLAGS += -ffunction-sections
