Fixed release bug.

--- a/software/Makefile
+++ b/software/Makefile
@@ -35,5 +35,5 @@ release: all images
 	echo "| Creating release    |"
 	echo "+---------------------+"
 	mkdir -p ${BUILD_DIR_BASE}/release
-	cp ${BUILD_DIR_BASE}/partitions.bin ${BUILD_DIR_BASE}/PowerSocket.bin ${BUILD_DIR_BASE}/spiffs.img ${BUILD_DIR_BASE}/release/
+	cp ${BUILD_DIR_BASE}/partitions.bin ${BUILD_DIR_BASE}/PowerSocket.bin ${BUILD_DIR_BASE}/fatfs.img ${BUILD_DIR_BASE}/release/
 	tar -zcvf ${BUILD_DIR_BASE}/release.tar.gz -C ${BUILD_DIR_BASE}/release .
