Updated board versions to final (v1) version, and added renders.

--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,6 @@
 [submodule "software/build_tools/Lua-RTOS-ESP32"]
 	path = software/build_tools/Lua-RTOS-ESP32
 	url = https://github.com/whitecatboard/Lua-RTOS-ESP32.git
+[submodule "software/components/libwebsockets"]
+	path = software/components/libwebsockets
+	url = https://github.com/warmcat/libwebsockets.git
