Removed mkspiffs dependency. Updated sdkconfig to newest esp-idf.

--- a/software/Makefile
+++ b/software/Makefile
@@ -29,10 +29,10 @@ romfs_prepare:
 	cp -R -T ${BUILD_DIR_BASE}/data_files/ $(PROJECT_PATH)/romfs-files
 $(APP_BIN): romfs_prepare
 
-release: all images
+release: all
 	echo "+---------------------+"
 	echo "| Creating release    |"
 	echo "+---------------------+"
 	mkdir -p ${BUILD_DIR_BASE}/release
-	cp ${BUILD_DIR_BASE}/partitions.bin ${BUILD_DIR_BASE}/PowerSocket.bin ${BUILD_DIR_BASE}/fatfs.img ${BUILD_DIR_BASE}/release/
+	cp ${BUILD_DIR_BASE}/partitions.bin ${BUILD_DIR_BASE}/PowerSocket.bin ${BUILD_DIR_BASE}/release/
 	tar -zcvf ${BUILD_DIR_BASE}/release.tar.gz -C ${BUILD_DIR_BASE}/release .
